@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-19T01:16:00Z",
-  "count_outdated" : 1819,
-  "uniques_outdated" : 1060,
-  "count" : 1831,
-  "uniques" : 1072,
+  "timestamp" : "2025-04-20T01:24:00Z",
+  "count_outdated" : 1820,
+  "uniques_outdated" : 1061,
+  "count" : 1834,
+  "uniques" : 1075,
   "clones" : [
-    {
-      "timestamp": "2025-04-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-07T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-19T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
