@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 3,
+  "count": 14,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-04-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-07T00:00:00Z",
       "count": 1,
@@ -56,6 +51,11 @@
       "timestamp": "2025-04-18T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-19T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
